--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,5 +3,5 @@ develop = .
 extends = http://pythonpackages.com/buildout/zope2/2.13.x-dev
 
 [zope2]
-eggs = zope2_bootstrap
-zcml = zope2_bootstrap
+eggs += zope2_bootstrap
+zcml += zope2_bootstrap
