--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,3 +1,3 @@
 [buildout]
 develop = .
-extends = http://pythonpackages.com/buildout/zope2/2.13.x-dev
+extends = https://raw.github.com/pythonpackages/buildout-zope2/master/2.13.x-dev
