--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,3 +1,5 @@
 [buildout]
 develop = .
-extends = https://raw.github.com/plock/pins/master/zope-2.13
+extends = 
+    https://raw.github.com/plock/pins/master/dev
+    https://raw.github.com/plock/pins/master/zope-2.13
