--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,3 +3,8 @@ develop = .
 extends = 
     https://raw.github.com/plock/pins/master/plone-4-3
     https://raw.github.com/plock/pins/master/dev
+
+[plone]
+eggs = 
+    Zope2
+    zope2_bootstrap
