--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,10 +1,9 @@
 [buildout]
-develop = .
-extends = 
-    https://raw.github.com/plock/pins/master/plone-4-3
-    https://raw.github.com/plock/pins/master/dev
+extends = https://raw.githubusercontent.com/plock/pins/master/plone-4-3
 
 [plone]
 eggs = 
     Zope2
+    zope2_bootstrap
+zcml = 
     zope2_bootstrap
