--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,8 @@
 [buildout]
-extends = https://raw.githubusercontent.com/plock/pins/master/plone-4-3
+develop = .
+extends = 
+    https://raw.githubusercontent.com/plock/pins/master/plone-4-3
+    https://raw.githubusercontent.com/plock/pins/master/dev
 
 [plone]
 eggs =
@@ -7,3 +10,6 @@ eggs =
     zope2_bootstrap
 zcml =
     zope2_bootstrap
+
+[versions]
+zope2_bootstrap = 0.2.0
